# dashboard

./: CMakeLists.txt  CarGauge.qml  Main.qml  TopIcons.qml  Tracker.cpp  Tracker.h  config.ini  main.cpp  qml.qrc
trucks/: DAFXF105.qml  Generic.qml  MANTGX.qml
trucks/components/: GenericGauge.qml
